--- a/css/filters.css
+++ b/css/filters.css
@@ -53,14 +53,22 @@
 }
 .video
 {
-    height: auto;
     min-height: 250px;
+    height: auto;
 }
 .thumbnail
 {
     width: 100%;
     height: 150px;
     object-fit: cover;
+}
+.content
+{
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
 }
 .channel-icon
 {
@@ -75,7 +83,6 @@
     width: 100%;
     height: 40px;
     overflow: hidden;
-    display: flex;
 }
 .channel-name
 {
