--- a/css/filters.css
+++ b/css/filters.css
@@ -53,6 +53,7 @@
 }
 .video
 {
+    cursor: pointer;
     min-height: 250px;
     height: auto;
 }
@@ -64,6 +65,7 @@
 }
 .content
 {
+    cursor: pointer;
     width: 100%;
     height: 100px;
     padding: 10px;
